make it run once compiled